--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-browserify": "^0.5.0"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/bower install"
+    "postinstall": "./node_modules/.bin/bower install",
+    "start": "node testserver.js"
   }
 }
