--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.9.0",
     "gulp-browserify": "^0.5.1",
     "gulp-rename": "^1.2.2",
+    "gulp-watch": "^4.3.5",
     "partialify": "^3.1.5"
   },
   "devDependencies": {
