--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,9 @@
   "name": "ethic-app",
   "private": true,
   "dependencies": {
-    "angular": "1.4.5"
+    "angular": "1.4.5",
+    "angular-route": "^1.4.5",
+    "bootstrap": "^3.3.5",
+    "lodash": "^3.10.1"
   }
 }
