--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": "1.4.5",
     "angular-route": "^1.4.5",
     "bootstrap": "^3.3.5",
+    "chance": "^0.7.7",
     "lodash": "^3.10.1"
   }
 }
