--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bower": "^1.5.2",
     "browserify": "^11.0.1",
+    "coffeeify": "^1.1.0",
     "debowerify": "^1.3.1",
     "gulp": "^3.9.0",
     "gulp-browserify": "^0.5.1",
