--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "ethic-app",
   "private": true,
   "dependencies": {
+    "backbone-validation": "0.11.5",
     "bootstrap": "^3.3.5",
     "chance": "^0.7.7",
     "marionette": "^2.4.3",
