--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "chance": "^0.7.7",
     "marionette": "^2.4.3",
     "moment": "^2.10.6",
-    "select2": "^4.0.0"
+    "select2": "^4.0.0",
+    "dropzone": "~4.2.0"
   }
 }
