--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "description": "Frontend code for Ethic",
   "dependencies": {
     "bower": "^1.5.2",
-    "browserify": "^11.0.1",
+    "browserify": "^11.2.0",
     "coffeeify": "^1.1.0",
     "debowerify": "^1.3.1",
     "gulp": "^3.9.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-rename": "^1.2.2",
     "gulp-watch": "^4.3.5",
-    "partialify": "^3.1.5"
+    "partialify": "^3.1.5",
+    "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
     "chai": "3.3.0",
     "chai-fuzzy": "1.6.0",
     "coffee-script": "1.10.0",
+    "glob": "^5.0.15",
     "gulp-mocha-phantomjs": "^0.10.1",
     "gulp-run-sequence": "^0.3.2",
     "mocha": "^2.3.3",
