--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "coffeeify": "^1.1.0",
     "debowerify": "^1.3.1",
     "gulp": "^3.9.0",
+    "gulp-rename": "^1.2.2",
     "gulp-watch": "^4.3.5",
     "partialify": "^3.1.5",
+    "path-exists": "^2.1.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
@@ -29,7 +31,7 @@
     "node": "~4.2.1"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/bower install",
+    "postinstall": "./node_modules/gulp/bin/gulp.js postinstall ./node_modules/.bin/bower install",
     "start": "node testserver.js",
     "test": "./node_modules/gulp/bin/gulp.js test"
   }
