--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "bower": "^1.5.2",
     "browserify": "^11.2.0",
     "coffeeify": "^1.1.0",
+    "config": "^1.17.1",
     "debowerify": "^1.3.1",
+    "dotenv": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-rename": "^1.2.2",
     "gulp-watch": "^4.3.5",
