--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node": "~4.2.1"
   },
   "scripts": {
-    "postinstall": "./node_modules/gulp/bin/gulp.js postinstall ./node_modules/.bin/bower install",
+    "postinstall": "./node_modules/gulp/bin/gulp.js postinstall && ./node_modules/.bin/bower install",
     "start": "node testserver.js",
     "test": "./node_modules/gulp/bin/gulp.js test"
   }
