--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "moment": "^2.10.6",
     "select2": "^4.0.0",
     "dropzone": "~4.2.0",
-    "reconfig": "~1.6.3"
+    "reconfig": "~1.6.3",
+    "jquery.payment": "~1.3.2"
   }
 }
