--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Frontend code for Ethic",
   "dependencies": {
     "bower": "^1.5.2",
-    "browserify": "^11.2.0",
+    "browserify": "^12.0.1",
     "coffeeify": "^1.1.0",
     "config": "^1.17.1",
     "debowerify": "^1.3.1",
@@ -18,15 +18,15 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
-    "chai": "3.3.0",
+    "chai": "^3.4.1",
     "chai-fuzzy": "1.6.0",
     "coffee-script": "1.10.0",
-    "glob": "^5.0.15",
+    "glob": "^6.0.1",
     "gulp-mocha-phantomjs": "^0.10.1",
     "gulp-run-sequence": "^0.3.2",
     "mocha": "^2.3.3",
     "node-static": "^0.7.7",
-    "sinon": "1.17.1",
+    "sinon": "^1.17.2",
     "sinon-chai": "2.8.0"
   },
   "engines": {
